# SEOwayfinder

./: .gitignore  Dockerfile  README.md  main.py  setup.cfg  setup.py
cli/: arg_parser.py  commands.py
docs/: README.md
examples/: test.xml
spider/: cli.py  crawler.py  extractor.py  schemas.py  storage.py  utils.py
web/: __init__.py  report_view.py  routes.py
web/static/: styles.css
web/templates/: base.html  index.html  page_detail.html  report_template.html
