[metadata]
name = seowayfinder
version = 0.0.1
author = Applehand

[options]
packages =
    spider
    cli
install_requires =
    playwright
    pytest-playwright
    lxml
    pydantic
    aiohttp
    requests
    beautifulsoup4
    pyperclip
    Jinja2

[options.entry_points]
console_scripts =
    seo = cli.commands:execute_command
