[metadata]
name = seowayfinder
version = 0.0.1
author = Applehand

[options]
packages =
    spider
    cli
    web
install_requires =
    flask
    playwright
    pytest-playwright
    lxml
    pydantic
    aiohttp
    requests
    beautifulsoup4
    pyperclip
    Jinja2

[options.entry_points]
console_scripts =
    seo = cli.commands:execute_command
